modules/network/igw.tf
resource "aws_internet_gateway" "kc_igw" {
  vpc_id = aws_vpc.kc_vpc.id

  tags = merge(
    var.tags,
    {
      Name = "${var.project_name}-igw"
    }
  )
}

resource "aws_route_table" "kc_public_route_table" {
  vpc_id = aws_vpc.kc_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.kc_igw.id
  }

  tags = {
    Name = "${var.project_name}-public-route-table"
  }
}
